--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </section>-->
     <main>
-        <section>
+        <header>
             <div class="relative h-screen w-full bg-blue flex flex-col justify-center">
                 <div class="hero-svg absolute w-full top-0 right-0">
                     <img class="absolute right-0" src="assets/hero_green_vector.svg">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </header>
 
         <section class="width my-[48px]">
             <div>
@@ -156,19 +156,23 @@
             </div>
         </section>
 
-        <section>
+        <section class="my-[48px] md:width">
             <div class="flex flex-col justify-center items-center">
                 <h2 class="font-headings text-[40px] font-normal text-black_200">
                     Have a project?
                 </h2>
-                <p class="font-headings text-[40px] font-extralight text-black_200">
+                <p class="font-headings text-[40px] font-[200] text-black_200">
                     Let’s talk.
                 </p>
-                <div class="flex justify-center items-center w-[125px] h-[125px] rounded-full bg-gradient-to-r from-[#163E9E] to-[#031541]">
-                    <p class="font-medium texdt-[20px] font-headings text-white rotate-[-30deg]">Contact</p>
+                <div class="flex justify-center items-center w-[125px] h-[125px] rounded-full bg-gradient-to-r from-[#163E9E] to-[#031541] my-[30px]">
+                    <p class="font-medium text-[20px] font-headings text-white rotate-[-30deg]">Contact</p>
                 </div>
             </div>
         </section>
+
+        <footer>
+
+        </footer>
     </main>
 
 
